[gd_scene load_steps=16 format=3 uid="uid://cy15446xfgwq5"]

[ext_resource type="Script" uid="uid://dmdx1aamkixdd" path="res://Changes_Player/game.gd" id="1_ev7e4"]
[ext_resource type="PackedScene" uid="uid://caynm05p7b7ju" path="res://Changes_Player/player.tscn" id="1_qyihw"]
[ext_resource type="PackedScene" uid="uid://mbgufdxb01a5" path="res://Changes_Player/pinetree.tscn" id="2_m5gmw"]
[ext_resource type="Script" uid="uid://ctilb7loxlchb" path="res://Changes_Player/num_of_enemies.gd" id="3_d0162"]
[ext_resource type="PackedScene" uid="uid://cvvyn5x0o0r70" path="res://Changes_Player/shop.tscn" id="4_2fjmb"]
[ext_resource type="PackedScene" uid="uid://brc76bfutnp5e" path="res://Changes_Player/LevelUpbar.tscn" id="4_ev7e4"]
[ext_resource type="PackedScene" uid="uid://lbjbxyg3ekj8" path="res://Changes_Player/coin.tscn" id="7_37ltu"]
[ext_resource type="PackedScene" uid="uid://lxtjtcqq6tel" path="res://audio_manager.tscn" id="8_jde60"]

[sub_resource type="GDScript" id="GDScript_ev7e4"]
script/source = "extends CanvasLayer

signal up1
signal up2
signal up3
var money := 0
signal setMoney(amount: int)


func _on_shop_upgrade_pressed(numOfUpgrade: int) -> void:
	setMoney.emit(numOfUpgrade)
		
		

#
#func _on_coin_coin_got() -> void:
	#print(\"COINGOT\")
	#money += 2
	#%Money.text = \"Money: \" + str(money)
	


func _on_game_good_upgrade(upgrade: int) -> void:
	AudioManager.upgrade_w.pitch_scale = 1
	AudioManager.upgrade_w.play()
	if upgrade == 1:
		up1.emit()
	elif upgrade == 2:
		up2.emit()
	elif upgrade == 3:
		up3.emit()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0162"]
bg_color = Color(0.113824, 0.473524, 0.259728, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0.678944, 0.678944, 0.678944, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jde60"]
bg_color = Color(0.283378, 0.691802, 0.477195, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 20
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id="Theme_jde60"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnn5g"]
bg_color = Color(0.210507, 0.210507, 0.210507, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_beguh"]
bg_color = Color(0.301116, 0.465381, 0.765025, 1)

[sub_resource type="Curve2D" id="Curve2D_d0162"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -138, -168, 0, 0, 0, 0, 2223, -141, 0, 0, 0, 0, 2214, 1323, 0, 0, 0, 0, -150, 1357, 0, 0, 0, 0, -144, -170, 0, 0, 0, 0, -85, -134)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ev7e4")

[node name="CanvasBG" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasBG"]
offset_left = -29.0
offset_top = 7.0
offset_right = 1951.0
offset_bottom = 1132.0

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
script = SubResource("GDScript_ev7e4")

[node name="GameOverScreen" type="CanvasLayer" parent="UI"]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54902, 0.176471, 0.180392, 0.372549)

[node name="Label" type="Label" parent="UI/GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 196
text = "GAME OVER!"

[node name="Shop" parent="UI" instance=ExtResource("4_2fjmb")]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -844.0
offset_top = -495.0
offset_right = -844.0
offset_bottom = -495.0
grow_vertical = 0
scale = Vector2(5.71771, 5.71771)

[node name="ProceedButton" type="Button" parent="UI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 200)
offset_left = 103.0
offset_top = 840.0
offset_right = 715.0
offset_bottom = 1040.0
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_d0162")
text = "Proceed To Next Round!"

[node name="Panel" type="Panel" parent="UI"]
offset_left = 1624.0
offset_top = 16.0
offset_right = 1917.0
offset_bottom = 158.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jde60")

[node name="Panel2" type="Panel" parent="UI"]
offset_left = 787.0
offset_top = 21.0
offset_right = 1241.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jde60")

[node name="Panel3" type="Panel" parent="UI"]
offset_left = 1606.0
offset_top = 134.0
offset_right = 1932.0
offset_bottom = 232.0
theme = SubResource("Theme_jde60")
theme_override_styles/panel = SubResource("StyleBoxFlat_jde60")

[node name="LevelUpbar" parent="UI" instance=ExtResource("4_ev7e4")]
unique_name_in_owner = true
offset_left = 1655.0
offset_top = 147.0
offset_right = -34.0
offset_bottom = -871.0
theme_override_styles/background = SubResource("StyleBoxFlat_dnn5g")
theme_override_styles/fill = SubResource("StyleBoxFlat_beguh")

[node name="NumOfEnemies" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 813.0
offset_top = 45.0
offset_right = 1207.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.714868, 0.669018, 1)
theme_override_font_sizes/font_size = 50
text = "Enemies Left:"
script = ExtResource("3_d0162")

[node name="Round" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 1672.0
offset_top = 23.0
offset_right = 1924.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Round:"

[node name="Money" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 1663.0
offset_top = 68.0
offset_right = 2018.0
offset_bottom = 209.0
theme_override_colors/font_color = Color(0, 0.942998, 0.00686499, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Money: 
"

[node name="Player" parent="." instance=ExtResource("1_qyihw")]
position = Vector2(992, 717)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-810, -638)
curve = SubResource("Curve2D_d0162")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-146.879, 562.791)
rotation = -1.56687
progress = 6983.64

[node name="Pinetree" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(614, 542)

[node name="Pinetree2" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(1443, 153)

[node name="Pinetree3" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(1496, 847)

[node name="Pinetree4" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(258, 960)

[node name="Pinetree5" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(296, 611)

[node name="Pinetree6" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(1051, 894)

[node name="Pinetree7" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(1236, 460)

[node name="Pinetree8" parent="." instance=ExtResource("2_m5gmw")]
position = Vector2(1762, 521)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 746.0
offset_top = 509.0
offset_right = 817.0
offset_bottom = 532.0
scale = Vector2(1.66875, 1.66875)
theme_override_colors/font_color = Color(0, 0.5314, 0, 1)
text = "Level Up!"

[node name="Coin" parent="." instance=ExtResource("7_37ltu")]
visible = false

[node name="AudioManager" parent="." instance=ExtResource("8_jde60")]

[connection signal="goodUpgrade" from="." to="UI" method="_on_game_good_upgrade"]
[connection signal="levelUpText" from="." to="Player" method="textpopup"]
[connection signal="nextRound" from="." to="UI/NumOfEnemies" method="_on_game_next_round"]
[connection signal="setMoney" from="UI" to="." method="_on_ui_set_money"]
[connection signal="up1" from="UI" to="Player" method="_on_ui_up_1"]
[connection signal="up2" from="UI" to="Player" method="_on_ui_up_2"]
[connection signal="up3" from="UI" to="Player" method="_on_ui_up_3"]
[connection signal="upgrade_pressed" from="UI/Shop" to="UI" method="_on_shop_upgrade_pressed"]
[connection signal="pressed" from="UI/ProceedButton" to="." method="_on_button_pressed"]
[connection signal="levelUp" from="UI/LevelUpbar" to="." method="_on_level_upbar_level_up"]
[connection signal="levelUp" from="UI/LevelUpbar" to="Player" method="_on_level_upbar_level_up"]
[connection signal="noEnemies" from="UI/NumOfEnemies" to="." method="_on_num_of_enemies_no_enemies"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="coinGot" from="Coin" to="UI" method="_on_coin_coin_got"]
